--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-# index
+<html>
+  <head>
+    <title>Bogas's Blog</title>
+  </head>
+  <body>
+    <h1>making git page</h1>
+  </body>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="/__/firebase/7.23.0/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+       https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="/__/firebase/7.23.0/firebase-analytics.js"></script>
+
+  <!-- Initialize Firebase -->
+  <script src="/__/firebase/init.js"></script>
+</html>
